Labels, highlights and word wrap. Bug fixes.

--- a/app/assets/src/styles/views/taxon_tree_vis.scss
+++ b/app/assets/src/styles/views/taxon_tree_vis.scss
@@ -1,6 +1,17 @@
 @import "../themes/colors";
 
 .taxon-tree-vis {
+  &__container {
+    position: relative;
+
+    .node-overlay {
+      opacity: 0;
+      position: absolute;
+      left: 20px;
+      top: 20px;
+    }
+  }
+
   &__tooltip {
     background-color: $white;
     border: 1px solid $light-grey;
