--- a/app/assets/src/styles/visualizations/tidy_tree.scss
+++ b/app/assets/src/styles/visualizations/tidy_tree.scss
@@ -57,5 +57,9 @@
   .link {
     fill: none;
     stroke: $medium-grey;
+
+    &.highlighted {
+      stroke: $primary-light;
+    }
   }
 }
